# W3BSPID3R

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  W3BSP1D3R.bat  W3BSP1D3R.sh  docker-compose.yml  gui.py  install.sh  main.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  w3bsp1d3r.example.yaml
.github/workflows/: ci.yml
examples/: dvwa_scan.sh
scanner/: __init__.py  api.py  audit.py  auth.py  auth_enterprise.py  checkpoint.py  config.py  core.py  crawler.py  db.py  payloads.py  plugins.py  scheduler.py  virustotal.py  webhooks.py
scanner/integrations/: email_notifier.py  ticketing.py
scanner/reporting/: __init__.py  diff_report.py  html_report.py  json_report.py  markdown_report.py  models.py  pdf_report.py  sarif_report.py
scanner/testers/: __init__.py  base.py  cmdi.py  cookie_security.py  cors.py  csrf.py  cve.py  headers.py  idor.py  nosql_injection.py  open_redirect.py  path_traversal.py  sensitive_files.py  sqli.py  ssl_tls.py  ssti.py  subdomain.py  waf.py  xss.py
scanner/utils/: __init__.py  display.py  http.py  http_async.py  logging_config.py
tests/: test_baseline_error.py  test_crawler_xxe.py  test_enterprise.py  test_enterprise_phase3.py  test_http_safety.py  test_sensitive_files.py  test_sqli_boolean.py  test_xss_reflected.py
